Hack-fix layout overlap; want to use flexbox and drop iOS 5

--- a/letter.css
+++ b/letter.css
@@ -51,7 +51,7 @@ body.board {
 }
 .board .center {
     top: 100px;
-    bottom: 164px;
+    bottom: 186px;
     width: 100%;
     position: absolute;
 }
